fix(Column Mapping): Fixed spacing on scrolling the form

--- a/src/app/components/load/load.component.scss
+++ b/src/app/components/load/load.component.scss
@@ -60,11 +60,10 @@
 
   .scrollable-container {
     @include scrollable();
-    height: calc(85vh - 55px);
 
     .scrollable-content {
       @include centered();
-      padding-bottom: 7em;
+      padding-bottom: 10em;
 
       .main-text {
         margin-top: 1em;
